--- a/css/styles.css
+++ b/css/styles.css
@@ -4,22 +4,9 @@
     box-sizing: border-box;
 }
 
-/*body, html {
-    height: 100%;
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: rgb(0, 38, 66);
-    overflow-x: hidden;
-    font-family: Arial, sans-serif;
-    text-align: center;
-}*/
-
 .header1 {
-    /*margin: 2px;*/
-    color: rgb(204, 255, 0); /* Texto verde claro */
-    background-color: rgb(0, 38, 66); /* Fondo azul oscuro */
+    color: rgb(204, 255, 0); 
+    background-color: rgb(0, 38, 66);
     padding: 2px;
     border-radius: 8px;
     width: 100%;
@@ -30,16 +17,59 @@ h1 {
 }
 
 p {
-    color: rgb(239, 239, 239); /* Texto gris oscuro */
+    color: rgb(239, 239, 239);
 }
 
 /* Estilo del contenedor del juego */
-#game-container {
-    width: 100vw;
-    height: 80vh;
-    border: 3px solid rgb(204, 255, 0); /* Borde verde claro */
+.body-game {
+    font-family: 'Arial', sans-serif;
+    background-color: rgb(0, 38, 66);
+    color: rgb(0, 38, 66);
+    text-align: center;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+.header-game {
+    background: rgba(0, 38, 66, 0.8);
+    padding: 20px;
+    border-bottom: 3px solid #00bcd4;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.4);
+}
+
+.header-game .logo h1 {
+    font-size: 2.5rem;
+    color: #00bcd4;
+    text-shadow: 2px 2px 10px #00bcd4;
+}
+
+.header-game .tagline {
+    margin-top: 10px;
+    font-size: 1.2rem;
+    color: #ffffff;
+    text-shadow: 1px 1px 5px #000;
+}
+.main-game {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+}
+.game-container {
+    width: 80%;
+    height: 600px;
+    background-color: rgb(0, 38, 66);
+    border: 5px solid rgb(204, 255, 0);
+    border-radius: 10px;
     box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
-    background-color: rgb(0, 38, 66); /* Fondo gris claro */
+}
+.footer-game {
+    background: #0d1117;
+    color: #8e9297;
+    font-size: 0.9rem;
+    padding: 10px 0;
+    border-top: 3px solid #00bcd4;
 }
 
 /* Contenedor principal de las secciones */
@@ -60,8 +90,8 @@ p {
     flex: 1;
     margin: 0 10px;
     padding: 20px;
-    background-color: rgb(242, 242, 242); /* Fondo gris claro */
-    border: 1px solid rgb(204, 255, 0); /* Borde verde claro */
+    background-color: rgb(242, 242, 242); 
+    border: 1px solid rgb(204, 255, 0); 
     border-radius: 8px;
     box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
     text-align: left;
@@ -69,13 +99,13 @@ p {
 }
 
 .section1 h2 {
-    color: rgb(0, 38, 66); /* Títulos en azul oscuro */
+    color: rgb(0, 38, 66); 
     font-size: 24px;
     margin-top: 0;
 }
 
 .section1 p {
-    color: rgb(51, 51, 51); /* Texto en gris oscuro */
+    color: rgb(51, 51, 51); 
     font-size: 16px;
     line-height: 1.5;
 }
@@ -193,6 +223,41 @@ p {
     color: rgb(204, 255, 0);
 }
 
+/*Rank TB*/
+#highscores-container table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+    background-color: rgb(0, 38, 66);
+    text-align: center;
+    font-family: 'Arial', sans-serif;
+}
+
+#highscores-container th, #highscores-container td {
+    border: 1px solid rgb(204, 255, 0);
+    padding: 10px;
+}
+
+#highscores-container th {
+    background-color: rgb(0, 38, 66);
+    color: rgb(242, 242, 242);
+    text-transform: uppercase;
+}
+
+#highscores-container tr:nth-child(even) {
+    background-color:rgb(0, 38, 66);
+}
+
+#highscores-container tr:hover {
+    background-color: rgb(151, 180, 33);
+    color:  rgb(0, 38, 66);
+}
+
+#highscores-container td {
+    font-size: 14px;
+}
+
+
 /* Footer */
 .footer {
     text-align: center;
@@ -214,12 +279,10 @@ p {
     filter: hue-rotate(200deg);
 }
 
-/*parte del login y register*/
+/*Login y Registro*/
 
 .body2 {
     font-family: Arial, sans-serif;
-    /*color: rgb(204, 255, 0);*/
-   /* max-width: 400px;*/
     display: flex;
     justify-content: center;
     align-items: center;
@@ -273,3 +336,6 @@ label, input, button {
     color: rgb(204, 255, 0);
     box-shadow: 1px 1px 4px 3px rgba(204, 255, 0);
 }
+
+/*Logout*/
+
